force-app/main/default/objects/MIX_RPA_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>MIX RPA Settings</description>
    <fields>
        <fullName>COE_Org_Unit_Id__c</fullName>
        <description>Confirmation of Enrolment Org Unit Id</description>
        <label>COE Org Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_of_Residency_Org_Unit_Id__c</fullName>
        <label>Change of Residency Org Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Discontinuation_Org_Unit_Id__c</fullName>
        <label>Course Discontinuation Org Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Intermissions_Org_Unit_Id__c</fullName>
        <label>Course Intermissions Org Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_to_WI_Org_Unit_Id__c</fullName>
        <label>Grade to WI Org Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MIX RPA Settings</label>
</CustomObject>